--- a/registration_form.html
+++ b/registration_form.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8">
     <title>Registration Form</title>
-    <link rel="stylesheet" href="css/registration_form.css" />
+    <link rel="stylesheet" href="registration_form.css" />
   </head>
   <body>
     <div class="container">
